--- a/src/app/page-artikl/page-artikl.component.html
+++ b/src/app/page-artikl/page-artikl.component.html
@@ -20,7 +20,7 @@
                 (click)="openDialog()"
         >Objednat</button>
         <button mat-raised-button
-                (click)="dataService.SetSignOutUserToArtikl()"
+                (click)="dataService.SetSignOutUserToArtikl(1,1)"
         >Zrušit</button>
     </mat-card-actions>
 </mat-card>
