--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
                  [opened]="(isHandset$ | async) === false">
         <mat-toolbar>Menu</mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item href="prehled"><mat-icon>dashboard</mat-icon>Přehled</a>
+            <a *ngIf="false" mat-list-item href="prehled"><mat-icon>dashboard</mat-icon>Přehled</a>
             <a mat-list-item href="nastenka"><mat-icon>assignment</mat-icon>Nástěnka</a>
             <a mat-list-item href="udalosti"><mat-icon>group</mat-icon>Události</a>
             <a mat-list-item href="artikl"><mat-icon>shopping_cart</mat-icon>Artikl</a>
