--- a/src/app/page-events/page-events.component.html
+++ b/src/app/page-events/page-events.component.html
@@ -2,29 +2,25 @@
     <p class="hint-text">Seznam událostí, na které se můžeš přihlásit.</p>
     <div class="error-text" *ngIf="error">{{error}}</div>
     <mat-accordion multi>
-        <mat-expansion-panel *ngFor="let event of events">
+        <mat-expansion-panel #thispanel hideToggle *ngFor="let event of events">
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    <mat-icon *ngIf="false" color="primary">check_circle</mat-icon>
-                    <mat-icon *ngIf="true"  color="warn">error</mat-icon>
-                    <mat-icon *ngIf="false" color="accent">panorama_fish_eye</mat-icon>
-                    <span class="event-name">{{ event.datetimeStart + ' : ' + event.name }}</span>
+                <mat-panel-title class="datetime">
+                    <mat-icon *ngIf="true" [color]="getRegStatus(event).Color">{{getRegStatus(event).Icon}}</mat-icon>
+                    <span class="event-name">{{ thispanel.expanded ? event.name : AdjustText(event.name)}}</span><span class="event-members">{{event.members + '/' + event.memberlimit}}</span>
                 </mat-panel-title>
-                <mat-panel-description>
-                    {{ event.members + '/' + event.memberlimit }}
-                </mat-panel-description>
             </mat-expansion-panel-header>
 
           <ng-template matExpansionPanelContent>
+            <p></p>
             <table>
                 <tr><td class="row-name">Místo konání</td><td class="row-value">{{ event.location }}</td></tr>
                 <tr><td class="row-name">Pro školu</td><td class="row-value">{{ event.school }}</td></tr>
                 <tr><td class="row-name">Cena</td><td class="row-value">{{ event.prize }}</td></tr>
-                <tr><td class="row-name">Přihlašování do</td><td class="row-value">{{ event.datetimeDeadline }}</td></tr>
-                <tr><td class="row-name">Začátek</td><td class="row-value">{{ event.datetimeStart }}</td></tr>
-                <tr><td class="row-name">Konec</td><td class="row-value">{{ event.datetimeEnd }}</td></tr>
+                <tr><td class="row-name">Přihlašování do</td><td class="row-value">{{ GetDate(event.datetimeDeadline).toLocaleString('cs-CZ') }}</td></tr>
+                <tr><td class="row-name">Začátek</td><td class="row-value">{{ GetDate(event.datetimeStart).toLocaleString('cs-CZ') }}</td></tr>
+                <tr><td class="row-name">Konec</td><td class="row-value">{{ GetDate(event.datetimeEnd).toLocaleString('cs-CZ') }}</td></tr>
                 <tr><td class="row-name">Min. účastníků</td><td class="row-value">{{ event.memberlimitMin }}</td></tr>
-                <tr><td class="row-name">Stav</td><td class="row-value">{{"nutno doplnit"}}</td></tr>
+                <tr><td class="row-name">Stav</td><td class="row-value">{{getRegStatus(event).Text}}</td></tr>
             </table>
 
             <p>{{ event.description }}</p>
@@ -32,14 +28,14 @@
             <button mat-raised-button
                     color="primary"
                     (click)="this.signIn()"
-                    [disabled]="true">
+                    [disabled]="event.regStatus > 0 || dateTimeNow > GetDate(event.datetimeDeadline)">
                 Přihlásit
             </button>
 
             <button mat-raised-button
                     color="primary"
                     (click)="this.signIn()"
-                    [disabled]="false">
+                    [disabled]="event.regStatus === 0 || dateTimeNow > GetDate(event.datetimeDeadline)">
                 Odhlásit
             </button>
           </ng-template>
