--- a/src/app/page-artikl/page-artikl.component.html
+++ b/src/app/page-artikl/page-artikl.component.html
@@ -1,3 +1,5 @@
+<p class="hint-text" style="margin-left: 20px;">Under construction</p>
+<!--
 <p class="hint-text" style="margin-left: 20px;">Oblečení a jiný artikl s naším logem, který si můžeš objednat.</p>
 
 <mat-card class="artikl-card"
@@ -24,4 +26,4 @@
         >Zrušit</button>
     </mat-card-actions>
 </mat-card>
-
+-->
