--- a/src/app/page-chat/page-chat.component.html
+++ b/src/app/page-chat/page-chat.component.html
@@ -1,3 +1,5 @@
+<p class="hint-text" style="margin-left: 20px;">Under construction</p>
+<!--
 <div class="page-container">
     <p class="hint-text">Chat s trenéry.</p>
 
@@ -21,3 +23,4 @@
     <button color="primary" mat-raised-button>Odeslat</button>
 
 </div>
+-->
