--- a/src/app/page-login/page-login.component.html
+++ b/src/app/page-login/page-login.component.html
@@ -4,11 +4,11 @@
     <mat-card-subtitle>Přihlášení</mat-card-subtitle>
 
     <mat-form-field>
-        <input matInput placeholder="Login" [(ngModel)]="formLogin">
+        <input (keyup.enter)="_buttonClicked()" matInput placeholder="Login" [(ngModel)]="formLogin">
     </mat-form-field>
 
     <mat-form-field>
-        <input matInput placeholder="Heslo" [type]="pwdHide ? 'password' : 'text'" [(ngModel)]="formPwd">
+        <input (keyup.enter)="_buttonClicked()" matInput placeholder="Heslo" [type]="pwdHide ? 'password' : 'text'" [(ngModel)]="formPwd">
         <button mat-icon-button matSuffix (click)="pwdHide = !pwdHide">
             <mat-icon>{{pwdHide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
