--- a/src/app/page-adminevents/page-adminevents.component.css
+++ b/src/app/page-adminevents/page-adminevents.component.css
@@ -20,14 +20,22 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .example-element-detail {
   overflow: hidden;
-  display: flex;
 }
 
-.example-element-detail mat-icon:hover {
+tr, .example-element-detail mat-icon:hover {
   cursor: pointer;
+}
+
+button {
+  margin-right: 10px;
 }
 
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+mat-list-item {
+  width: 100%;
+  margin-top: 10px;
 }
