--- a/src/app/page-adminevents/page-adminevents.component.html
+++ b/src/app/page-adminevents/page-adminevents.component.html
@@ -11,7 +11,7 @@
        class="mat-elevation-z8">
   <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+    <td (click)="Expanded(element);"  mat-cell *matCellDef="let element"> {{element[column]}} </td>
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
@@ -19,27 +19,114 @@
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
       <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
 
-        <!-- Name editor -->
-        <mat-form-field appearance="outline">
-          <mat-label>Jméno</mat-label>
-          <input matInput [disabled]="editor.Name" [(ngModel)]="element.name">
-          <mat-icon matSuffix (click)="editor.Name = !editor.Name">create</mat-icon>
-        </mat-form-field>
+        <mat-list>
+          <!-- Name editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Jméno</mat-label>
+              <input matInput (keyup.enter)="editor.Name = true" [disabled]="editor.Name" [(ngModel)]="element.name">
+              <mat-icon matSuffix (click)="editor.Name = !editor.Name">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
 
-        <!-- Name editor -->
-        <mat-form-field appearance="outline">
-        <mat-label>Škola</mat-label>
-        <input matInput [disabled]="editor.School" [(ngModel)]="element.school">
-        <mat-icon matSuffix (click)="editor.School = !editor.School">create</mat-icon>
-        </mat-form-field>
+          <!-- Location editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Místo konání</mat-label>
+              <input matInput (keyup.enter)="editor.Location = true" [disabled]="editor.Location" [(ngModel)]="element.location">
+              <mat-icon matSuffix (click)="editor.Location = !editor.Location">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
 
-        <mat-divider></mat-divider>
-        <button mat-raised-button
-                color="primary"
-                (click)="saveBtn(element)">
-          Save
-        </button>
+          <!-- Prize editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Cena</mat-label>
+              <input matInput (keyup.enter)="editor.Prize = true" [disabled]="editor.Prize" [(ngModel)]="element.prize">
+              <mat-icon matSuffix (click)="editor.Prize = !editor.Prize">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
 
+          <!-- Member limit editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Limit účastníků</mat-label>
+              <input type="number" matInput (keyup.enter)="editor.MemberLimit = true" [disabled]="editor.MemberLimit" [(ngModel)]="element.memberlimit">
+              <mat-icon matSuffix (click)="editor.MemberLimit = !editor.MemberLimit">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+          <!-- Member limit min editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Min. účastníků</mat-label>
+              <input type="number" matInput (keyup.enter)="editor.MinLimit = true" [disabled]="editor.MinLimit" [(ngModel)]="element.memberlimitMin">
+              <mat-icon matSuffix (click)="editor.MinLimit = !editor.MinLimit">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+          <!-- Deadline editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Přihlašování do</mat-label>
+              <input matInput (keyup.enter)="editor.Deadline = true" [disabled]="editor.Deadline" [(ngModel)]="element.datetimeDeadline">
+              <mat-icon matSuffix (click)="editor.Deadline = !editor.Deadline">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+          <!-- Start editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Začátek</mat-label>
+              <input matInput (keyup.enter)="editor.Start = true" [disabled]="editor.Start" [(ngModel)]="element.datetimeStart">
+              <mat-icon matSuffix (click)="editor.Start = !editor.Start">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+          <!-- End editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Konec</mat-label>
+              <input matInput (keyup.enter)="editor.End = true" [disabled]="editor.End" [(ngModel)]="element.datetimeEnd">
+              <mat-icon matSuffix (click)="editor.End = !editor.End">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+          <!-- School editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Škola</mat-label>
+              <input matInput (keyup.enter)="editor.School = true" [disabled]="editor.School" [(ngModel)]="element.school">
+              <mat-icon matSuffix (click)="editor.School = !editor.School">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+          <!-- Description editor -->
+          <mat-list-item>
+            <mat-form-field class="edit-input" appearance="outline">
+              <mat-label>Popis</mat-label>
+              <input matInput (keyup.enter)="editor.Description = true" [disabled]="editor.Description" [(ngModel)]="element.description">
+              <mat-icon matSuffix (click)="editor.Description = !editor.Description">create</mat-icon>
+            </mat-form-field>
+          </mat-list-item>
+
+
+
+          <mat-list-item>
+            <button mat-raised-button
+                    color="basic"
+                    [disabled]="editor.Same"
+                    (click)="editor.RevertChanges()">
+              Zrušit
+            </button>
+            <button mat-raised-button
+                    color="primary"
+                    [disabled]="editor.Same"
+                    (click)="saveBtn(element)">
+              Uložit
+            </button>
+          </mat-list-item>
+        </mat-list>
       </div>
     </td>
   </ng-container>
