--- a/src/app/page-video/page-video.component.html
+++ b/src/app/page-video/page-video.component.html
@@ -1,13 +1,8 @@
-<div class="page-container">
+<!--<div class="page-container">
     <mat-form-field>
         <mat-label>Vyber video</mat-label>
         <mat-select [(value)]="selectedVideoID">
             <mat-option value="{{video.Id}}" *ngFor="let video of videos">{{video.Name}}</mat-option>
         </mat-select>
     </mat-form-field>
-
-    <!--<p>{{videoText(selectedVideoID)}}</p>
-
-    <iframe allowfullscreen [src]="videoURL(selectedVideoID)">
-    </iframe>-->
-</div>
+</div>-->
