--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -19,7 +19,7 @@
       </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-      <mat-toolbar color="primary">
+      <mat-toolbar style="z-index: 100 !important;" color="primary">
           <button
                   type="button"
                   aria-label="Toggle sidenav"
